test query user data from one table
query user data and pageable user data use jpa

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -10,9 +10,9 @@ spring:
       ddl-auto: none
     show-sql: true
   datasource:
-    url: jdbc:h2:mem:test
-    username: test
-    password: test
+    url: jdbc:h2:mem:onetablesystem
+    username: root
+    password: IamNotAI
     driver-class-name: org.h2.Driver
     hikari:
       connection-test-query: select 1
